--- a/style.css
+++ b/style.css
@@ -1,71 +1,98 @@
 * {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-h1, h3, h4 {
-    font-weight: bold;
+h1,
+h3,
+h4 {
+  font-weight: bold;
 }
 
 body {
-    background-color: beige;
-    margin: 0 auto;
-    font-family: 'PT Serif', serif;
+  background-color: beige;
+  margin: 0 auto;
+  font-family: "PT Serif", serif;
+  font-size: 1.5vw;
+}
+
+select {
+  font-family: "PT Serif", serif;
+  font-size: 1.5vw;
 }
 
 .navbar {
-    font-size: 1.5em;
-    background-color: white;
-    top: 0;
-    overflow: hidden;
-    height: 1.5em;
-    width: 100%;
-    position: fixed;
-}   
+  font-size: 1.5em;
+  background-color: white;
+  top: 0;
+  overflow: hidden;
+  height: 1.5em;
+  width: 100%;
+  position: fixed;
+}
 
 .navbar a {
-    padding: 5px;
-    text-align: center;
-    text-decoration: none;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
 }
 
 .navbar a:hover {
-    background-color: beige;
-    transition: color 0.5s ease-in-out;
+  background-color: beige;
+  transition: color 0.5s ease-in-out;
 }
 
 .icons {
-    float: right;
+  float: right;
 }
 main {
-    margin: 2em  2em 2em;
-    text-align: left;
+  margin: 2em 2em 2em;
+  text-align: left;
+}
+
+@media screen and (max-width: 400px) {
+  i {
+    font-size: 0.75em;
+  }
 }
 
 .box {
-    border-radius: 5px;
-    margin: 10% 12%;
-    padding: 2em 2em;
-    background: white;
-    height: 50%;
-    width: 75%;
-    display: block;
-    grid-area: auto;
+  border-radius: 5px;
+  margin: 10% 12%;
+  padding: 2em 2em;
+  background: white;
+  height: 50%;
+  width: 75%;
+  display: block;
+  grid-area: auto;
 }
 
 .flex-container {
-    display: flex;
+  display: flex;
 }
 
 form {
-    font-family: 'PT Serif', serif;
+  font-family: "PT Serif", serif;
 }
 
-input {
-    font-size: 1em;
-    margin-bottom: 1em;
+input,
+textarea {
+  font-family: "PT Serif", serif;
+  font-size: 1em;
+  margin-bottom: 1em;
 }
 
-#button { 
-    font-size: 1em;
+#button {
+  border-radius: 5px;
+  padding: 2px;
+  font-size: 1em;
 }
+
+#verzonden {
+  align-content: center;
+  background-color: white;
+  height: 25%;
+  width: 100%;
+  margin: 2em 0;
+}
+
